tests/invalid/Property_Invalid_10.whiley
property inc(int x) -> (int r):
    x + 1

function f(int x) -> (bool r):
    return inc(x)